data/derived/comb/progs/unify/prog3572.ml.out
Characters 45-46:
  listReverse (explode w) = w;;
                            ^
Error: This expression has type string but an expression was expected of type
         char list
